--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"files.associations": {
 		"libftprintf.h": "c",
 		"stdarg.h": "c",
-		"printft.h": "c"
+		"printft.h": "c",
+		"printf.h": "c",
+		"stdio.h": "c",
+		"ft_printf.h": "c"
 	}
 }
